--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "async": "^2.4.1"
+    "async": "^2.4.1",
+    "engine.io-parser": "^2.1.1",
+    "base64id": "^1.0.0",
+    "debug": "^3.1.0",
+    "ws": "^3.3.3",
+    "uws": "^9.14.0",
+    "component-emitter": "^1.2.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "webpack": "^3.10.0"
   }
 }
