--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "debug": "^3.1.0",
     "ws": "^3.3.3",
     "uws": "^9.14.0",
-    "component-emitter": "^1.2.1"
+    "component-emitter": "^1.2.1",
+    "parseqs": "^0.0.5",
+    "parseuri": "^0.0.5"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
